<resources>
    <string name="app_name">Fun with Flags</string>

    <!-- Main Activity -->
    <string name="app_logo">App Logo</string>
    <string name="start_points">Starting Points\n%d</string>
    <string name="target_points">Target Points\n%d</string>
    <string name="start_button">Start!</string>
    <string name="restarted">Game restarted!</string>

    <!-- Flags Activity -->
    <string name="single_layout_vertical">One Column Layout</string>
    <string name="double_layout_vertical">Two Column Layout</string>
    <string name="triple_layout_vertical">Three Column Layout</string>
    <string name="layout_vertical">Vertical Layout</string>
    <string name="single_layout_horizontal">One Column Layout</string>
    <string name="double_layout_horizontal">Two Column Layout</string>
    <string name="triple_layout_horizontal">Three Column Layout</string>
    <string name="layout_horizontal">Horizontal Layout</string>
    <string name="country_flag">%s Flag</string>

    <string name="status_points">Current Score: %d</string>
    <string name="status_victory">You won!</string>
    <string name="status_loss">You lost!</string>
    <string name="applied_special">Applied special points to questions!</string>

    <!-- Select Question Activity -->
    <string name="back_button">Go Back</string>
    <string name="question_button">%s\n%s\n%s</string>
    <string name="question_button_description">Question %d Button</string>
    <string name="question_header">Q%d %s</string>
    <string name="question_special"> (Special)</string>
    <string name="question_points">Points: %d</string>
    <string name="question_penalty">Penalty: %d</string>

    <!-- Answer Question Fragment -->
    <string name="correct">Correct! +%d points</string>
    <string name="incorrect">Incorrect! -%d points</string>
</resources>
