<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/singleLayoutButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:contentDescription="@string/single_layout_vertical"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1.0"
        app:layout_constraintEnd_toStartOf="@+id/doubleLayoutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/single_vertical" />

    <ImageButton
        android:id="@+id/doubleLayoutButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:contentDescription="@string/double_layout_vertical"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1.0"
        app:layout_constraintEnd_toStartOf="@+id/tripleLayoutButton"
        app:layout_constraintStart_toEndOf="@+id/singleLayoutButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/double_vertical" />

    <ImageButton
        android:id="@+id/tripleLayoutButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:contentDescription="@string/triple_layout_vertical"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1.0"
        app:layout_constraintEnd_toStartOf="@+id/directionLayoutButton"
        app:layout_constraintStart_toEndOf="@+id/doubleLayoutButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/triple_vertical" />

    <ImageButton
        android:id="@+id/directionLayoutButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="false"
        android:background="@null"
        android:contentDescription="@string/layout_horizontal"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tripleLayoutButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/right_arrow" />
</androidx.constraintlayout.widget.ConstraintLayout>